--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_fonts: ^6.2.1
   firebase_core: ^2.31.0
   firebase_auth: ^4.19.5
+  flutter_secure_storage: ^8.0.0
 
   
 
