--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   
 
     sdk: flutter
-  provider: ^6.0.2
+  provider: ^6.0.3
     
 
 
@@ -40,9 +40,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   google_fonts: ^6.2.1
+
   firebase_core: ^2.31.0
-  firebase_auth: ^4.19.5
+  firebase_auth: ^4.2.2
   flutter_secure_storage: ^8.0.0
+  cloud_firestore: ^4.17.3
 
   
 
